--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
 <html>
-
+  <head>
+    <title>Knwotein — Exchanges Calculator</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script type="text/javascript" src="js/food_directory.js"></script>
+  </head>
+  <body>
+    <div class="container">
+            <label for = "food_name" class="margin-bottom-10">Food</label>
+            <input type = "text" id="food_name" class="food_name margin-bottom-20">
+            <label for = "food_weight" class="margin-bottom-10">Weight</label>
+            <input type = "text" id="food_weight" class="food_weight margin-bottom-20">
+            <div class="answer"></div>
+            <button class="submit">Calculate</button>
+        </div>
+    <script type="text/javascript" src="js/protein_math.js"></script>
+    <script type="text/javascript" src="js/input_form.js"></script>
+  </body>
 </html>
