--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   </head>
   <body>
     <div class="container">
-            <label for = "food_name" class="margin-bottom-10">Food</label>
-            <input type = "text" id="food_name" class="food_name margin-bottom-20">
-            <label for = "food_weight" class="margin-bottom-10">Weight</label>
-            <input type = "text" id="food_weight" class="food_weight margin-bottom-20">
-            <div class="answer"></div>
-            <button class="submit">Calculate</button>
+        <div class="print_answer margin-bottom-20 padding-top-10 padding-left-10">
+          <h3>Amount of Protein:</h3>
         </div>
+        <label for = "food_name" class="margin-bottom-10">Food</label>
+        <input type = "text" id="food_name" class="food_name margin-bottom-20">
+        <label for = "food_weight" class="margin-bottom-10">Weight</label>
+        <input type = "text" id="food_weight" class="food_weight margin-bottom-20">
+        <button class="submit">Calculate</button>
+        <button class="Delete">Delete</button>
+      </div>
     <script type="text/javascript" src="js/protein_math.js"></script>
-    <script type="text/javascript" src="js/input_form.js"></script>
   </body>
 </html>
