--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <div class="print_answer margin-bottom-20 padding-top-10 padding-left-10">
           <h3>Amount of Protein:</h3>
         </div>
-        <label for = "food_name" class="margin-bottom-10">Food</label>
-        <input type = "text" id="food_name" class="food_name margin-bottom-20">
-        <label for = "food_weight" class="margin-bottom-10">Weight</label>
-        <input type = "text" id="food_weight" class="food_weight margin-bottom-20">
-        <button class="submit">Calculate</button>
-        <button class="Delete">Delete</button>
+        <label for="food_name" class="margin-bottom-10">Food</label>
+        <input type="text" id="food_name" class="food_name margin-bottom-20">
+        <label for="food_weight" class="margin-bottom-10">Weight</label>
+        <input type="text" id="food_weight" class="food_weight margin-bottom-20">
+        <button type="submit" class="submit">Calculate</button>
+        <button type="reset" class="clear">clear</button>
       </div>
     <script type="text/javascript" src="js/protein_math.js"></script>
   </body>
