--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <input type="text" id="food_name" class="food_name margin-bottom-20">
         <label for="food_weight" class="margin-bottom-10">Weight</label>
         <input type="text" id="food_weight" class="food_weight margin-bottom-20">
-        <button type="submit" class="submit">Calculate</button>
-        <button type="reset" class="clear">clear</button>
+        <section class="margin-bottom-20">
+          <button type="submit" class="submit">Calculate</button>
+          <button type="reset" class="clear">clear</button>
+        </section>
+        <p>Nutritional information taken from <a href="http://www.bordbia.ie/consumer/aboutfood/pages/default.aspx" target="_blank">Bord Bia</a></p>
       </div>
     <script type="text/javascript" src="js/protein_math.js"></script>
   </body>
