updated class names

--- a/weight_calculator.html
+++ b/weight_calculator.html
@@ -8,8 +8,8 @@
   <body>
     <div class="container">
         <div class="margin-bottom-20">
-          <a href="index.html">Exchanges</a>
-          <a href="#" class="active">Weight</a>
+          <a href="index.html" class="margin-right-10">Exchanges</a>
+          <a href="#" class="link_active">Weight</a>
         </div>
         <div class="print_answer margin-bottom-20 padding-top-10 padding-left-10">
           <h3>Food Weight:</h3>
@@ -19,8 +19,8 @@
         <label for="exchanges" class="margin-bottom-10">Exchanges</label>
         <input type="text" id="food_weight" class="food_weight margin-bottom-20">
         <section class="margin-bottom-20">
-          <button type="submit" class="submit">Calculate</button>
-          <button type="reset" class="clear">clear</button>
+          <button type="submit" class="submit_button margin-right-10">Calculate</button>
+          <button type="reset" class="clear_button">Clear</button>
         </section>
         <p>Nutritional information taken from <a href="http://www.bordbia.ie/consumer/aboutfood/pages/default.aspx" target="_blank">Bord Bia</a></p>
       </div>
