--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Knwotein — Exchanges Calculator</title>
+    <title>Knowtein — Exchanges Calculator</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/food_directory.js"></script>
   </head>
   <body>
     <div class="container">
+      <div class="margin-bottom-20">
+        <a href="#" class="link_active margin-right-10">Exchanges</a>
+        <a href="weight_calculator.html">Weight</a>
+      </div>
         <div class="print_answer margin-bottom-20 padding-top-10 padding-left-10">
-          <h3>Amount of Protein:</h3>
+          <h3>Exchanges:</h3>
         </div>
         <label for="food_name" class="margin-bottom-10">Food</label>
         <input type="text" id="food_name" class="food_name margin-bottom-20">
         <label for="food_weight" class="margin-bottom-10">Weight</label>
         <input type="text" id="food_weight" class="food_weight margin-bottom-20">
         <section class="margin-bottom-20">
-          <button type="submit" class="submit">Calculate</button>
-          <button type="reset" class="clear">clear</button>
+          <button type="submit" class="submit_button margin-right-10">Calculate</button>
+          <button type="reset" class="clear_button">Clear</button>
         </section>
         <p>Nutritional information taken from <a href="http://www.bordbia.ie/consumer/aboutfood/pages/default.aspx" target="_blank">Bord Bia</a></p>
       </div>
