--- a/index.html
+++ b/index.html
@@ -8,22 +8,14 @@
   <body>
     <div class="container">
       <div class="margin-bottom-20">
-        <a href="#" class="link_active margin-right-10">Exchanges</a>
-        <a href="weight_calculator.html">Weight</a>
+        <h1 class="margin-bottom-10">Dashboard</h1>
+        <ul>
+          <li>
+            <a href="exchanges_calculator.html">Calculator</a>
+          </li>
+        </ul>
       </div>
-        <div class="print_answer margin-bottom-20 padding-top-10 padding-left-10">
-          <h3>Exchanges:</h3>
-        </div>
-        <label for="food_name" class="margin-bottom-10">Food</label>
-        <input type="text" id="food_name" class="food_name margin-bottom-20">
-        <label for="food_weight" class="margin-bottom-10">Weight</label>
-        <input type="text" id="food_weight" class="food_weight margin-bottom-20">
-        <section class="margin-bottom-20">
-          <button type="submit" class="submit_button margin-right-10">Calculate</button>
-          <button type="reset" class="clear_button">Clear</button>
-        </section>
-        <p>Nutritional information taken from <a href="http://www.bordbia.ie/consumer/aboutfood/pages/default.aspx" target="_blank">Bord Bia</a></p>
-      </div>
+    </div>
     <script type="text/javascript" src="js/protein_math.js"></script>
   </body>
 </html>
