refactored javascript to remove duplication of variables, algorithim and files

--- a/weight_calculator.html
+++ b/weight_calculator.html
@@ -16,14 +16,14 @@
         </div>
         <label for="food_name" class="margin-bottom-10">Food</label>
         <input type="text" id="food_name" class="food_name margin-bottom-20">
-        <label for="exchanges" class="margin-bottom-10">Exchanges</label>
-        <input type="text" id="food_weight" class="food_weight margin-bottom-20">
+        <label for="exchanges" class="margin-bottom-10 food_exchanges">Exchanges</label>
+        <input type="text" id="exchanges" class="food_weight margin-bottom-20">
         <section class="margin-bottom-20">
           <button type="submit" class="submit_button margin-right-10">Calculate</button>
           <button type="reset" class="clear_button">Clear</button>
         </section>
         <p>Nutritional information taken from <a href="http://www.bordbia.ie/consumer/aboutfood/pages/default.aspx" target="_blank">Bord Bia</a></p>
       </div>
-    <script type="text/javascript" src="js/exchanges_math.js"></script>
+    <script type="text/javascript" src="js/calculator.js"></script>
   </body>
 </html>
