--- a/exchanges_calculator.html
+++ b/exchanges_calculator.html
@@ -16,7 +16,7 @@
         </div>
         <label for="food_name" class="margin-bottom-10">Food</label>
         <input type="text" id="food_name" class="food_name margin-bottom-20">
-        <label for="food_weight" class="margin-bottom-10">Weight</label>
+        <label for="food_weight" class="margin-bottom-10 food_weight">Weight</label>
         <input type="text" id="food_weight" class="food_weight margin-bottom-20">
         <section class="margin-bottom-20">
           <button type="submit" class="submit_button margin-right-10">Calculate</button>
@@ -24,6 +24,6 @@
         </section>
         <p>Nutritional information taken from <a href="http://www.bordbia.ie/consumer/aboutfood/pages/default.aspx" target="_blank">Bord Bia</a></p>
       </div>
-    <script type="text/javascript" src="js/protein_math.js"></script>
+    <script type="text/javascript" src="js/calculator.js"></script>
   </body>
 </html>
