--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="margin-bottom-20">
+      <div class="row margin-bottom-20">
         <h1 class="margin-bottom-10">Dashboard</h1>
         <ul>
           <li>
